fix form autofocus

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
       </div>
   
       <div class="masthead-form">
-        <form action="">
+        <form>
 
           <h2>Join the congress mailing list to receive important updates.</h2>
           
           <label for="title">Title</label>
-          <select name="title" id="title" autofocus>
-            <option value="none">Select title</option>
+          <select name="title" id="title">
+            <option value="">Select title</option>
             <option value="mr">Mr</option>
             <option value="mrs">Mrs</option>
             <option value="miss">Miss</option>
