add video controls

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p>The Congress is an opportunity to learn practical media skills, to establish new networks and to be inspired in your work as part of the Catholic Church's critical mission to speak the truth of the Gospel into the world.</p>
         
         <div class="video-container">
-          <iframe src="https://www.youtube.com/embed/9jYO5-6x97g?si=XQny0yNz_yu6OiBO&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/9jYO5-6x97g?si=hy8LLDPUgfsKTlhv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
 
         <div class="dateline">🔥 28-29 August 2014 • Sydney, Australia</div>
