fix date and venue

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <iframe src="https://www.youtube.com/embed/9jYO5-6x97g?si=hy8LLDPUgfsKTlhv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
 
-        <div class="dateline">🔥 28-29 August 2014 • Sydney, Australia</div>
+        <div class="dateline">🔥 28-30 August 2024 • The Miller Hotel, Sydney</div>
       </div>
   
       <div class="masthead-form">
