--- a/index copy 2.html
+++ b/index copy 2.html
@@ -5,9 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Australian Catholic Communications Congress 2024</title>
 
-  <link rel="stylesheet" href="./style.css">
-  <link rel="stylesheet" href="./form-custom.css">
-  <script src="./remove-iframe-css.js" defer></script>
+  <link rel="stylesheet" href="style.css">
 
   <!-- Third-party scripts -->
   <!-- <script src="https://cdn.tailwindcss.com"></script> -->
@@ -38,7 +36,32 @@
       </div>
   
       <div class="masthead-form">
-        <iframe id="form" width="100%" height="800px" src="https://agora.catholic.org.au/l/576423/2024-02-11/3wlxyr" frameborder="0"></iframe>
+        <form>
+
+          <h2>Join the congress mailing list to receive important updates.</h2>
+          
+          <label for="title">Title</label>
+          <select name="title" id="title">
+            <option value="">Select title</option>
+            <option value="mr">Mr</option>
+            <option value="mrs">Mrs</option>
+            <option value="miss">Miss</option>
+            <option value="deacon">Deacon</option>
+            <option value="father">Father</option>
+            <option value="monsigneur">Monsigneur</option>
+            <option value="bishop">Bishop</option>
+            <option value="archbishop">Archbishop</option>
+            <option value="cardinal">Cardinal</option>
+          </select>
+          <label for="signup">Name</label>
+          <input type="text" name="name" placeholder="Your Name">
+          <label for="email">Email</label>
+          <input type="email" name="email" placeholder="name@company.org">
+          <label for="signup">Organisation</label>
+          <input type="text" name="organisation" placeholder="Your organisation">
+          <a class="btn submit">Join mailing list</a>
+          
+        </form>
       </div>
 
     </div>
