--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
         </div>
 
         <div class="dateline">🔥 28-30 August 2024 • The Miller Hotel, Sydney</div>
+      
+        <div id="masthead-logos">
+          <img src="acbc-logo-lanscape-mono-reverse.svg" alt="">
+          <img src="acpa-logo-reverse.svg" alt="">
+          <img src="the-miller-sydney-logo.png" alt="">
+          <img src="cathnews-sub-landscape-reverse-white.svg" alt="">
+          <a href="mailto:media@catholic.org.au"><img src="sponsorship-available.png" alt=""></a>
+        </div>
+      
       </div>
   
       <div class="masthead-form">
