social meta tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://modernmessage.catholic.au">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Australian Catholic Communications Congress 2024">
+  <meta property="og:description" content="Missionary message for the modern world">
+  <meta property="og:image" content="https://modernmessage.catholic.au/comms-congress-social-meta-card.jpg">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="https://modernmessage.catholic.au">
+  <meta property="twitter:url" content="https://modernmessage.catholic.au">
+  <meta name="twitter:title" content="Australian Catholic Communications Congress 2024">
+  <meta name="twitter:description" content="Missionary message for the modern world">
+  <meta name="twitter:image" content="https://modernmessage.catholic.au/comms-congress-social-meta-card.jpg">
+
+
   <title>Australian Catholic Communications Congress 2024</title>
 
   <link rel="stylesheet" href="./style.css">
@@ -37,11 +54,11 @@
         <div class="dateline">🔥 28-30 August 2024 • The Miller Hotel, Sydney</div>
       
         <div id="masthead-logos">
-          <img src="acbc-logo-lanscape-mono-reverse.svg" alt="">
-          <img src="acpa-logo-reverse.svg" alt="">
-          <img src="the-miller-sydney-logo.png" alt="">
-          <img src="cathnews-sub-landscape-reverse-white.svg" alt="">
-          <a href="mailto:media@catholic.org.au"><img src="sponsorship-available.png" alt=""></a>
+          <img title="ACBC"  alt="ACBC" src="acbc-logo-lanscape-mono-reverse.svg" alt="">
+          <img title="ACPA" alt="ACPA" src="acpa-logo-reverse.svg" alt="">
+          <img title="The Miller Hotel" alt="The Miller Hotel" src="the-miller-sydney-logo.png" alt="">
+          <img title="Cathnews" alt="Cathnews" src="cathnews-sub-landscape-reverse-white.svg" alt="">
+          <a href="mailto:media@catholic.org.au"><img title="Sponsors" src="sponsorship-available.png" alt=""></a>
         </div>
       
       </div>
