social media tags 2

--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Australian Catholic Communications Congress 2024</title>
 
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://modernmessage.catholic.au">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Australian Catholic Communications Congress 2024">
+  <meta property="og:description" content="Missionary message for the modern world">
+  <meta property="og:image" content="https://modernmessage.catholic.au/comms-congress-social-meta-card.jpg">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="https://modernmessage.catholic.au">
+  <meta property="twitter:url" content="https://modernmessage.catholic.au">
+  <meta name="twitter:title" content="Australian Catholic Communications Congress 2024">
+  <meta name="twitter:description" content="Missionary message for the modern world">
+  <meta name="twitter:image" content="https://modernmessage.catholic.au/comms-congress-social-meta-card.jpg">
+	<link href="https://s3.ap-southeast-2.amazonaws.com/acbcwebsite/Images/ACBC/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
+
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./form-custom.css">
   <script src="./remove-iframe-css.js" defer></script>
