add bottom edge element

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <section id="masthead">
 
     <header>
-      <div class="logo"><img src="./images/accc-logo-reverse.svg" alt=""></div>
+      <div class="logo"><img src="./accc-logo-primary-reverse.png" alt=""></div>
       <div class="socials" ><a title="Follow us on Facebook" href="https://www.facebook.com/modernmessage2024/" target="_blank"><i class='bx bxl-facebook-circle'></i></a></div>
     </header>
 
@@ -109,6 +109,10 @@
         <a href="mailto:media@catholic.org.au" target="_blank"><img src="sponsorship-available.png" alt=""></a>
       </div>
 
+    </div>
+
+    <div id="bottom">
+      <img src="./comms-congress-edge-01.png" alt="">
     </div>
 
   </section>
