--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -38,11 +38,18 @@
       margin: 4rem 0 1rem;
     }
 
+    
+
   </style>
 
 
 </head>
-<body>
+<body class="inside">
+
+  <header>
+    <div class="logo"><img src="./accc-logo-primary-reverse.png" alt=""></div>
+    <div class="socials" ><a title="Follow us on Facebook" href="https://www.facebook.com/modernmessage2024/" target="_blank"><i class='bx bxl-facebook-circle'></i></a></div>
+  </header>
 
   <div id="privacy-policy-content">
 
@@ -106,6 +113,10 @@
     GPO Box 368 Canberra ACT 2601<br>
     Telephone: (02) 6201 9859</p>
 
+  </div>
+
+  <div id="bottom">
+    <img src="./comms-congress-edge-01.png" alt="">
   </div>
   
 </body>
