--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./form-custom.css">
-  <script src="./remove-iframe-css.js" defer></script>
+  <script src="./script.js" defer></script>
 
   <!-- Third-party scripts -->
   <!-- <script src="https://cdn.tailwindcss.com"></script> -->
@@ -114,6 +114,8 @@
     <div id="bottom">
       <img src="./comms-congress-edge-01.png" alt="">
     </div>
+
+    <img class="bg1" src="./images/website-masthead-bg-sydney-01.jpg" alt="">
 
   </section>
 
